anke-to-dev/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anke-to-client
  labels:
    app: anke-to-client

spec:
  selector:
    matchLabels:
      app: anke-to-client
  template:
    metadata:
      labels:
        app: anke-to-client
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org

      containers:
        - name: anke-to-client
          image: ghcr.io/traptitech/anke-to-ui:main@sha256:91159f7c5022b0dce2f1646ca9d4e141a8f1036860f20cf8abe28e48bb33ecaa
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
