anke-to-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anke-to
  labels:
    app: anke-to

spec:
  selector:
    matchLabels:
      app: anke-to
  template:
    metadata:
      labels:
        app: anke-to
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org

      containers:
        - name: anke-to
          image: ghcr.io/traptitech/anke-to:main@sha256:2e25fbef469ad34704792d0ca95fbb9590bf9212ecbb796ebf2730a4216b5425
          ports:
            - containerPort: 7000
