anke-to-dev/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anke-to-server
  labels:
    app: anke-to-server

spec:
  selector:
    matchLabels:
      app: anke-to-server
  template:
    metadata:
      labels:
        app: anke-to-server
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org

      containers:
        - name: anke-to-server
          image: ghcr.io/traptitech/anke-to:main@sha256:d3332e9919395f636afdd63b9615c22d1894795735ab3d73c7c5b16d180ff683
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
