anke-to-dev/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anke-to-client-service

spec:
  type: ClusterIP
  selector:
    app: anke-to-client
  ports:
    - name: anke-to-client
      port: 3001
      targetPort: http
