anke-to-dev/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anke-to-server-service

spec:
  type: ClusterIP
  selector:
    app: anke-to-server
  ports:
    - name: anke-to-server
      port: 3000
      targetPort: http
