anke-to-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anke-to-service

spec:
  type: ClusterIP
  selector:
    app: anke-to
  ports:
    - name: anke-to
      port: 3001
      targetPort: 7000
