anke-to-dev/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: anke-to-ingressroute

spec:
  entryPoints:
    - websecure
  tls:
    secretName: anke-to-tls
  routes:
    - kind: Rule
      match: Host(`anke-to-dev.trapti.tech`) && PathPrefix(`/api/`)
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - namespace: anke-to-dev
          kind: Service
          name: anke-to-server-service
          port: 3000
          scheme: http
          weight: 1
    - kind: Rule
      match: Host(`anke-to-dev.trapti.tech`)
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - namespace: anke-to-dev
          kind: Service
          name: anke-to-client-service
          port: 3001
          scheme: http
          weight: 1
